Wrote handlers for Like and Follow (PUT and DELETE both) operations, started Comment and Ban operations
