# service/api/delete-unlikePhoto.go
@@ -1,0 +1,58 @@
+package api
+
+import (
+	"encoding/json"
+	"net/http"
+	"strconv"
+
+	"github.com/Zeta-am/wasa-photo/service/api/reqcontext"
+	"github.com/Zeta-am/wasa-photo/service/database"
+	"github.com/Zeta-am/wasa-photo/service/utils"
+	"github.com/julienschmidt/httprouter"
+)
+
+
+func (rt *_router) unlikePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	w.Header().Set("Content-type", "application/json")
+
+	// Get the user id from the URL
+	uid, err := strconv.Atoi(ps.ByName("idUser"))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Check if the user is authorized
+	if uid != ctx.UserID {
+		http.Error(w, "Unauthorized", http.StatusUnauthorized)
+		return
+	}
+
+	// Get the id of the photo
+	pid, err := strconv.Atoi(ps.ByName("idPhoto"))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Unlike the photo
+	res, err := rt.db.UnfollowUser(uid, pid)
+	if res == database.NO_ROWS {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+
+	// The like that has been removed
+	var like = utils.Like {
+		UserID: uid,
+		PostID: pid,
+	}
+
+	// Encode the response
+	w.WriteHeader(http.StatusOK)
+	err = json.NewEncoder(w).Encode(like)
+	if err != nil {
+		http.Error(w, "can't encode the response: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
